--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -152,10 +152,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </p><p><span id="Version"></span>
 </p>
 <h2><span class="mw-headline" id="Versione">Versione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Version / Date of merge
+<p>Versione / Data del merge
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.8.4 / 2025-06-10:
 </p>
@@ -246,13 +244,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102604
+Cached time: 20260126102621
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 148/1000000
+CPU time usage: 0.052 seconds
+Real time usage: 0.087 seconds
+Preprocessor visited node count: 147/1000000
 Post&#8208;expand include size: 2916/2097152 bytes
 Template argument size: 694/2097152 bytes
 Highest expansion depth: 6/100
@@ -262,15 +260,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.786      1 -total
- 22.17%    3.278      1 Template:Macro/it
- 21.57%    3.190      1 Template:Codeextralink
- 19.15%    2.831      1 Template:ComboBox
- 17.64%    2.608      1 Template:FileName
- 16.98%    2.510      1 Template:MenuCommand
+100.00%   17.056      1 -total
+ 32.19%    5.490      1 Template:Macro/it
+ 20.58%    3.510      1 Template:Codeextralink
+ 19.90%    3.394      1 Template:ComboBox
+ 14.56%    2.483      1 Template:MenuCommand
+ 10.37%    1.768      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102604 and revision id 1744210. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102621 and revision id 1744212. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
