--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -80,10 +80,8 @@ Centro di massa
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Fornisce la massa totale e la posizione del centro di massa risultante da pi&ugrave; oggetti selezionati. &Egrave; possibile scegliere diverse densit&agrave; per ciascun oggetto.
+<p>Calcola la massa totale e la posizione del centro di massa degli oggetti selezionati. &Egrave; possibile scegliere densit&agrave; diverse per ciascun oggetto.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Information/CenterOfMass.FCMacro">Macro</a></i>
 </p>
@@ -244,13 +242,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102621
+Cached time: 20260126102702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.052 seconds
-Real time usage: 0.087 seconds
-Preprocessor visited node count: 147/1000000
+Real time usage: 0.089 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 2916/2097152 bytes
 Template argument size: 694/2097152 bytes
 Highest expansion depth: 6/100
@@ -260,15 +258,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.056      1 -total
- 32.19%    5.490      1 Template:Macro/it
- 20.58%    3.510      1 Template:Codeextralink
- 19.90%    3.394      1 Template:ComboBox
- 14.56%    2.483      1 Template:MenuCommand
- 10.37%    1.768      1 Template:FileName
+100.00%   13.831      1 -total
+ 34.88%    4.824      1 Template:Macro/it
+ 20.40%    2.822      1 Template:ComboBox
+ 16.39%    2.267      1 Template:Codeextralink
+ 14.08%    1.947      1 Template:MenuCommand
+ 11.24%    1.554      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102621 and revision id 1744212. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102702 and revision id 1744214. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
