--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -118,10 +118,9 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Selezionare gli oggetti
-</p>
-</div>
+<ol><li>Selezionare uno o pi&ugrave; solidi.</li>
+<li>Avviare la macro.</li>
+<li>Apparir&agrave; una finestra con l'elenco dei solidi. Si pu&ograve; specificare la densit&agrave; del materiale in diverse unit&agrave; di misura o scegliere tra materiali predefiniti.</li></ol>
 <p><span id="Available_Options"></span>
 </p>
 <h3><span class="mw-headline" id="Opzioni_disponibili">Opzioni disponibili</span></h3>
@@ -242,13 +241,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102702
+Cached time: 20260126102739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.089 seconds
-Preprocessor visited node count: 146/1000000
+CPU time usage: 0.046 seconds
+Real time usage: 0.067 seconds
+Preprocessor visited node count: 145/1000000
 Post&#8208;expand include size: 2916/2097152 bytes
 Template argument size: 694/2097152 bytes
 Highest expansion depth: 6/100
@@ -258,15 +257,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.831      1 -total
- 34.88%    4.824      1 Template:Macro/it
- 20.40%    2.822      1 Template:ComboBox
- 16.39%    2.267      1 Template:Codeextralink
- 14.08%    1.947      1 Template:MenuCommand
- 11.24%    1.554      1 Template:FileName
+100.00%   11.090      1 -total
+ 36.74%    4.074      1 Template:Macro/it
+ 23.62%    2.619      1 Template:Codeextralink
+ 14.72%    1.633      1 Template:FileName
+ 12.55%    1.392      1 Template:ComboBox
+  9.42%    1.045      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102702 and revision id 1744214. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102739 and revision id 1744218. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
