--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -122,13 +122,11 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p><span id="Available_Options"></span>
 </p>
 <h3><span class="mw-headline" id="Opzioni_disponibili">Opzioni disponibili</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Color the solids according to density.</li>
-<li>Display the location of the center of mass.</li>
-<li>Export and import <i>masses</i>, <i>materials</i> and <i>densities</i> (even if it's not a <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.csv</span> file from the macro, but columns must be named accordingly).</li>
-<li>Save densities in the document (remove them again when setting material to <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">default  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>).</li>
-<li>You can change some preferences at <b>Tools &rarr; Edit parameters &rarr; Preferences &rarr; Macros</b>.</li></ul>
-</div>
+<ul><li>Colora i solidi in base alla densit&agrave;.</li>
+<li>Visualizza la posizione del centro di massa.</li>
+<li>Esporta e importa <i>masse</i>, <i>materiali</i> e <i>densit&agrave;</i> (anche se non si tratta di un file <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.csv</span> dalla macro, ma le colonne devono essere denominate di conseguenza).</li>
+<li>Salva le densit&agrave; nel documento (rimuoverle di nuovo quando si imposta il &#8203;&#8203;materiale su <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">default  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>).</li>
+<li>Si possono modificare alcune preferenze in <b>Strumenti &rarr; Modifica parametri &rarr; Preferenze &rarr; Macro</b>.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div class="mw-translate-fuzzy">
 <p>Scarica la macro da GitHub:
@@ -239,15 +237,15 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102951
+Cached time: 20260126103048
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.084 seconds
-Preprocessor visited node count: 144/1000000
-Post&#8208;expand include size: 3094/2097152 bytes
-Template argument size: 816/2097152 bytes
+CPU time usage: 0.043 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 143/1000000
+Post&#8208;expand include size: 3099/2097152 bytes
+Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -255,15 +253,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.371      1 -total
- 32.04%    6.527      1 Template:ComboBox
- 23.33%    4.753      1 Template:Macro/it
- 18.32%    3.731      1 Template:FileName
- 13.55%    2.761      1 Template:Codeextralink
- 10.75%    2.191      1 Template:MenuCommand
+100.00%   10.729      1 -total
+ 33.35%    3.578      1 Template:Codeextralink
+ 30.27%    3.248      1 Template:Macro/it
+ 11.92%    1.279      1 Template:ComboBox
+ 11.24%    1.206      1 Template:FileName
+ 10.47%    1.123      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102951 and revision id 1744220. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103048 and revision id 1744222. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
