--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -128,11 +128,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Salva le densit&agrave; nel documento (rimuoverle di nuovo quando si imposta il &#8203;&#8203;materiale su <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">default  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>).</li>
 <li>Si possono modificare alcune preferenze in <b>Strumenti &rarr; Modifica parametri &rarr; Preferenze &rarr; Macro</b>.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Scarica la macro da GitHub:
-</p>
-</div>
-<p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Information/CenterOfMass.FCMacro">Macro CenterOfMass.FCMacro</a>
+<p>Si pu&ograve; scaricare la macro da GitHub:
+<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Information/CenterOfMass.FCMacro">Macro CenterOfMass.FCMacro</a>
 </p>
 <div class="mw-translate-fuzzy">
 <p>Scaricare e incollare i file icona in una sottodirectory denominata CenterOfMass nella directory delle macro:
@@ -237,13 +234,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103048
+Cached time: 20260126103109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.072 seconds
-Preprocessor visited node count: 143/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 142/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -253,15 +250,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.729      1 -total
- 33.35%    3.578      1 Template:Codeextralink
- 30.27%    3.248      1 Template:Macro/it
- 11.92%    1.279      1 Template:ComboBox
- 11.24%    1.206      1 Template:FileName
- 10.47%    1.123      1 Template:MenuCommand
+100.00%    9.211      1 -total
+ 30.74%    2.831      1 Template:Macro/it
+ 23.59%    2.173      1 Template:ComboBox
+ 15.92%    1.466      1 Template:MenuCommand
+ 14.59%    1.344      1 Template:Codeextralink
+ 11.63%    1.071      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103048 and revision id 1744222. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103109 and revision id 1744224. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
