--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -142,11 +142,9 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </p><p>0.8.4 / 2025-06-10:
 </p>
 <ul><li>Fix: <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/pull/197">Correzione della macro che ha smesso di funzionare con Qt6 (PR#197)</a></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.8.3 / 2025-01-23:
 </p>
-<ul><li>Fix: <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/pull/191">Several fixes (PR#191)</a>, FreeCAD 0.19 no longer supported</li></ul>
-</div>
+<ul><li>Fix: <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/pull/191">Diverse correzioni (PR#191)</a>, FreeCAD 0.19 non &egrave; pi&ugrave; supportato</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.8.0 / 2025-01-06: Thanks to farahats9 for the contribution
 </p>
@@ -227,13 +225,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103143
+Cached time: 20260126103158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 140/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 139/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -243,15 +241,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.920      1 -total
- 30.60%    3.954      1 Template:Macro/it
- 20.94%    2.705      1 Template:ComboBox
- 20.26%    2.617      1 Template:Codeextralink
- 13.26%    1.713      1 Template:MenuCommand
- 12.62%    1.630      1 Template:FileName
+100.00%   33.984      1 -total
+ 37.27%   12.667      1 Template:Macro/it
+ 35.41%   12.033      1 Template:Codeextralink
+ 11.30%    3.841      1 Template:ComboBox
+  7.87%    2.676      1 Template:FileName
+  6.87%    2.336      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103143 and revision id 1744230. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103158 and revision id 1744232. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
