--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_CenterOfMass.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="Macro CenterOfMass (27% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;rodek masy (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; CenterOfMass (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--high" title="&#51656;&#47049;&#51473;&#49900; &#47588;&#53356;&#47196; (85% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -152,14 +152,12 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Correzione: la macro ora funziona con l'esempio Assembly in FreeCAD 1.0</li>
 <li>Correzione: seleziona automaticamente il materiale per i solidi se &egrave; gi&agrave; assegnato dal nuovo sistema di materiali</li>
 <li>Modifiche minori all'interfaccia utente</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>0.7.6 / 2024-08-01: Prepare for major FreeCAD release
+<p>0.7.6 / 2024-08-01: Preparazine per la versione principale di FreeCAD
 </p>
-<ul><li>Fix: Make 0.22.0dev AssemblyExample work</li>
-<li>Fix: BOM Import containing custom material</li>
-<li>Fix: Support the new material cards</li>
-<li>Fix: Changed or missing icons, version checks</li></ul>
-</div>
+<ul><li>Correzione: fa funzionare AssemblyExample 0.22.0dev</li>
+<li>Correzione: importazione BOM contenente materiale personalizzato</li>
+<li>Correzione: supporto per le nuove schede materiale</li>
+<li>Correzione: icone modificate o mancanti, controlli di versione</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.7.3 / 2023-09-11:
 </p>
@@ -223,31 +221,31 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103254
+Cached time: 20260126103347
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 138/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 137/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2556/5000000 bytes
+Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.172      1 -total
- 29.91%    6.333      1 Template:Macro/it
- 19.72%    4.176      1 Template:Codeextralink
- 17.16%    3.633      1 Template:FileName
- 17.10%    3.621      1 Template:ComboBox
- 14.20%    3.006      1 Template:MenuCommand
+100.00%   13.676      1 -total
+ 32.44%    4.437      1 Template:Macro/it
+ 24.23%    3.314      1 Template:Codeextralink
+ 17.84%    2.440      1 Template:ComboBox
+ 13.46%    1.840      1 Template:FileName
+  8.99%    1.230      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103254 and revision id 1744235. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103347 and revision id 1744237. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
