--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -158,13 +158,11 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Correzione: importazione BOM contenente materiale personalizzato</li>
 <li>Correzione: supporto per le nuove schede materiale</li>
 <li>Correzione: icone modificate o mancanti, controlli di versione</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.7.3 / 2023-09-11:
 </p>
-<ul><li>New: Added buttons for Copy to clipboard</li>
-<li>New: Scalable Vector Graphics icon</li>
-<li>Fix: Compatibility for FreeCAD versions and web</li></ul>
-</div>
+<ul><li>Nuovo: aggiunti pulsanti per Copia negli appunti</li>
+<li>Nuovo: icona Scalable Vector Graphics</li>
+<li>Correzione: compatibilit&agrave; per le versioni FreeCAD e web</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.7.0 / 2023-02-13:
 </p>
@@ -221,13 +219,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103347
+Cached time: 20260126103421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.044 seconds
-Real time usage: 0.072 seconds
-Preprocessor visited node count: 137/1000000
+Real time usage: 0.071 seconds
+Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -237,15 +235,15 @@ Unstrip post&#8208;expand size: 2557/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.676      1 -total
- 32.44%    4.437      1 Template:Macro/it
- 24.23%    3.314      1 Template:Codeextralink
- 17.84%    2.440      1 Template:ComboBox
- 13.46%    1.840      1 Template:FileName
-  8.99%    1.230      1 Template:MenuCommand
+100.00%   11.403      1 -total
+ 29.27%    3.338      1 Template:Macro/it
+ 27.75%    3.164      1 Template:ComboBox
+ 15.27%    1.741      1 Template:Codeextralink
+ 13.29%    1.515      1 Template:FileName
+ 11.41%    1.301      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103347 and revision id 1744237. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103421 and revision id 1744239. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
