--- a/wiki/fr/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/fr/FEM_ConstraintElectrostaticPotential.html
@@ -3,7 +3,7 @@
 <li><a href="../FEM_ConstraintElectrostaticPotential.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FEM ConstraintElectrostaticPotential (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (18% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (76% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--complete" title="MES: Warunek brzegowy potencja&#322;u elektrostatycznego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1089;&#1090;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1087;&#1086;&#1090;&#1077;&#1085;&#1094;&#1080;&#1072;&#1083; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -68,7 +68,7 @@
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>Cr&eacute;e une condition limite FEM pour le potentiel &eacute;lectrostatique. &Agrave; utiliser avec les &eacute;quations <a href="../fr/FEM_EquationElectrostatic.html" title="FEM EquationElectrostatic/fr">&eacute;lectrostatiques</a>, de <a href="../fr/FEM_EquationElectricforce.html" title="FEM EquationElectricforce/fr">force &eacute;lectrique</a>, <a href="../fr/FEM_EquationMagnetodynamic.html" title="FEM EquationMagnetodynamic/fr">magn&eacute;todynamiques</a>, <a href="../fr/FEM_EquationMagnetodynamic2D.html" title="FEM EquationMagnetodynamic2D/fr">magn&eacute;todynamiques 2D</a> ou <a href="../fr/FEM_EquationStaticCurrent.html" title="FEM EquationStaticCurrent/fr">courant statique</a>.
 </p><p><span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span>&nbsp;: fonctionne &eacute;galement avec le <a href="../fr/FEM_SolverCalculixCcxtools.html" title="FEM SolverCalculixCcxtools/fr">solveur CalculiX</a> refactoris&eacute;.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>: Can also be used to apply a magnetic flux density boundary condition.
+</p><p><span style="font-size:small;"><a href="../fr/Release_notes_1.2.html" title="Release notes 1.2/fr">introduit dans la version 1.2</a></span>&nbsp;: peut &eacute;galement &ecirc;tre utilis&eacute; pour appliquer une condition limite de densit&eacute; de flux magn&eacute;tique.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FEM_electro_potential_sphere.PNG&amp;filetimestamp=20250617071812&amp;.html" class="mw-file-description"><img src="../File/FEM_electro_potential_sphere.PNG" decoding="async" width="400" height="414" class="mw-file-element" data-file-width="598" data-file-height="619"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Condition limite de potentiel &eacute;lectrostatique dans l'<a href="../fr/FEM_Examples.html" title="FEM Examples/fr">exemple FEM</a> de la capacit&eacute; de deux sph&egrave;res</p>
@@ -155,35 +155,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095031
+Cached time: 20260126110911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.096 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 431/1000000
-Post&#8208;expand include size: 26858/2097152 bytes
+Post&#8208;expand include size: 26873/2097152 bytes
 Template argument size: 10915/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1818/5000000 bytes
+Unstrip post&#8208;expand size: 1823/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.659      1 -total
- 30.35%    7.483      1 Template:GuiCommandContainer
- 23.24%    5.730      1 Template:FEM_Tools_navi/fr
- 18.04%    4.449      2 Template:Navigation_menu_2
- 16.91%    4.169      1 Template:GuiCommandFemInfo/fr
-  9.68%    2.386      1 Template:Userdocnavi/fr
-  8.58%    2.116      1 Template:GuiCommand/fr
-  8.18%    2.018      2 Template:Docnav/fr
-  6.17%    1.521      4 Template:Version/fr
-  6.02%    1.485      3 Template:Button
+100.00%   29.666      1 -total
+ 30.87%    9.158      1 Template:GuiCommandContainer
+ 24.64%    7.311      1 Template:FEM_Tools_navi/fr
+ 18.13%    5.378      2 Template:Navigation_menu_2
+ 15.71%    4.661      1 Template:GuiCommandFemInfo/fr
+ 12.73%    3.777      1 Template:Userdocnavi/fr
+  7.92%    2.350      2 Template:Docnav/fr
+  6.94%    2.058      1 Template:GuiCommand/fr
+  6.61%    1.961      1 Template:MenuCommand
+  6.12%    1.817      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126095031 and revision id 1744141. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126110911 and revision id 1744274. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
